--- a/com.restaurantProject/pom.xml
+++ b/com.restaurantProject/pom.xml
@@ -10,28 +10,37 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.7.2</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>io.github.bonigarcia</groupId>
 			<artifactId>webdrivermanager</artifactId>
 			<version>5.2.0</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.7.0</version>
-			<scope>test</scope>
+			<version>7.6.0</version>
+			<scope>compile</scope>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
-			<version>5.2.2</version>
+			<version>3.17</version>
 		</dependency>
+
+
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
-			<version>5.2.2</version>
+			<version>3.17</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
@@ -40,25 +49,35 @@
 		
 	</dependencies>
 	
+	<properties>
+     <maven.compiler.source>17.0.6</maven.compiler.source>
+     <maven.compiler.target>17.0.6</maven.compiler.target>
+</properties>
+	
 	<build>
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.22.2</version>
-					<configuration>
-						<suiteXmlFiles>
-							<suiteXmlFile>
-                            grouping.xml
-                        </suiteXmlFile>
-						</suiteXmlFiles>
-					</configuration>
-				</plugin>
+		<plugins>
 
-			</plugins>
-		</pluginManagement>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<suiteXmlFiles>
+						<file>grooping.xml</file>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+			  
+
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+    </plugin>
+
+
+		</plugins>
 	</build>
-
 	
 </project>
